# ChangeLog for sys-libs/libraw1394
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/libraw1394/ChangeLog,v 1.5 2003/06/12 22:16:11 msterret Exp $

  12 Jun 2003; <msterret@gentoo.org> libraw1394-0.9.0.ebuild:
  fix Header

*libraw1394-0.9.0 (12 Jul 2002)

  27 Mar 2003; Seemant Kulleen <seemant@gentoo.org> libraw1394-0.9.0.ebuild:
  create device.  Closes bug #18287 by Frantz Dhin <tragedy_rm@hotmail.com>

  20 Jul 2002; Mark Guertin <gerk@gentoo.org> libraw1394-0.9.0.ebuild :
  Added ppc keyword

  12 Jul 2002; Doug Goldstein <cardoe@gentoo.org> libraw1394-0.9.0.ebuild
  ChangeLog files/digest-libraw1394-0.9.0 :

  New package
  libraw1394 provides direct access to the IEEE 1394 bus through the Linux 1394 subsystem's 
  raw1394 user space interface. (quote from author's site).
  Thanks to Hanno Beock hanno@gmx.de in bug #4166 for the ebuild.
  Cleaned up the ebuild prior to adding to the tree.