@@ -1,3 +1,3 @@
-MD5 01fb5be19ce93284963493342b766720 libraw1394-0.9.0.ebuild 729
-MD5 f4b67cd95630d98c846d727578a52f5b ChangeLog 983
+MD5 e2cdf34402e5a2590c2c21dc68438ecf libraw1394-0.9.0.ebuild 776
+MD5 b0c9b2030a0d817bee2ed46e254ffc16 ChangeLog 1194
 MD5 6bc52708d033490062bf8c735077bd74 files/digest-libraw1394-0.9.0 68
